Finising touches/testing/bug fixes
